--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,63 @@
-<amplify-authenticator>
-  <ng-template
-    amplifySlot="authenticated"
-    let-user="user"
-    let-signOut="signOut"
-  >
-    <app-restaurants></app-restaurants>
+<!-- Render loading if authStatus is still configuring  -->
+<ng-container *ngIf="authenticator.authStatus === 'configuring'">
+    Loading...
+  </ng-container>
+  
+  <!-- Only render this if there's an authenticated user -->
+  <ng-container *ngIf="authenticator.authStatus === 'authenticated'">
+
+    <div id="background-img">       
+    
+    </div>  
+    <div id="flowers" >       
+    
+    </div>  
+
+
+    <nav mat-tab-nav-bar [tabPanel]="tabPanel">
+        <a mat-tab-link
+        *ngFor="let link of navLinks"
+        [routerLink]="link.link"
+        routerLinkActive #rla="routerLinkActive"
+        [active]="rla.isActive"
+        class="tab"
+        i18n>
+        <span class="test">
+          {{link.label}} 
+        </span>
+         <!--{{ '6/15/15' | date:undefined:undefined:'ko-KR' }}-->
+        
+        </a>
+        </nav>
+        <mat-tab-nav-panel #tabPanel >
+          <router-outlet></router-outlet>
+        </mat-tab-nav-panel>
+
+
+
+        <!--
+        <ng-container i18n>Hello i18n!</ng-container>
+
+        <h1>{{text}}</h1>
+
+      <h1>{{I18n.get('Test String!')}}</h1>
+
+      <button (click)="switchLanguage()">Switch language</button>
+
     <button (click)="signOut()">Sign Out</button>
-  </ng-template>
-</amplify-authenticator>
+        -->
+
+
+  </ng-container>
+  
+  <!-- Render sign-in screen otherwise with authenticator -->
+  <ng-container *ngIf="authenticator.authStatus !== 'authenticated'">
+    <amplify-authenticator>
+        <ng-template
+              amplifySlot="authenticated"
+              let-user="user"
+              let-signOut="signOut"
+            />
+    </amplify-authenticator>
+  </ng-container>
+
