--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -13,16 +13,15 @@
         <input type="text" formControlName="description" autocomplete="off" />
       </div>
       <div>
-        <label>Address: </label>
-        <input type="text" formControlName="address" autocomplete="off" />
+        <label>City: </label>
+        <input type="text" formControlName="city" autocomplete="off" />
       </div>
       <button type="submit">Submit</button>
     </form>
   </div>
 
-
   <div *ngFor="let restaurant of restaurants">
-    <div>{{ restaurant?.address }}</div>
+    <div>{{ restaurant?.city }}</div>
     <div>{{ restaurant?.name }}</div>
     <div>{{ restaurant?.description }}</div>
   </div>
