--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -21,7 +21,7 @@
   </div>
 
   <div *ngFor="let restaurant of restaurants">
-    <div>{{ restaurant?.city }}</div>
+    <div>{{ restaurant?.address }}</div>
     <div>{{ restaurant?.name }}</div>
     <div>{{ restaurant?.description }}</div>
   </div>
