--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,23 @@
+.toolbar-item-spacer {
+  flex: 1 1 auto;
+}
+
+.app-container {
+  height: 90%;
+  margin: 0;
+}  
+.app-sidenav {
+  width: 230px;
+}
+.app-sidenav-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+} 
+
+
+
 #background-img {  
     background-image: url("../assets/lightwood.jpeg");  
     min-height: 100%;
