--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,63 +1,83 @@
 <!-- Render loading if authStatus is still configuring  -->
 <ng-container *ngIf="authenticator.authStatus === 'configuring'">
-    Loading...
-  </ng-container>
+  Loading...
+</ng-container>
+
+<!-- Only render this if there's an authenticated user -->
+<ng-container *ngIf="authenticator.authStatus === 'authenticated'">
+
+      <mat-toolbar color="primary">
+        <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
+            <mat-icon>menu</mat-icon>
+        </button>
+        <span>{{I18n.get('Jacqui & Peter Wedding')}}</span>
+        <span class="toolbar-item-spacer"></span>
+
+        <button mat-icon-button matTooltip="Notifications">
+            <mat-icon>notifications</mat-icon>
+        </button>
+        <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
+            <mat-icon>account_circle</mat-icon>
+        </button>
+        <mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
+            <button mat-menu-item routerLink="#">
+                <mat-icon>person</mat-icon><span>My Account</span>
+            </button>
+            <button mat-menu-item routerLink="/user">
+                <mat-icon>settings</mat-icon><span>Settings</span>
+            </button>
+            <button mat-menu-item routerLink="#">
+                <mat-icon>help</mat-icon><span>Help</span>
+            </button>
+            <mat-divider></mat-divider>
+            <button mat-menu-item routerLink="#">
+                <mat-icon>exit_to_app</mat-icon>Logout
+            </button>
+        </mat-menu>
+      </mat-toolbar>
+
+      <mat-sidenav-container class="app-container">
+        <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
+            <mat-nav-list>
+                <mat-list-item routerLink="/welcome">
+                    <mat-icon>dashboard</mat-icon><span>Home</span>
+                </mat-list-item>
+                <mat-list-item routerLink="/events">
+                  <span>Events</span>
+                </mat-list-item>
+                <mat-list-item routerLink="/ourstory">
+                  <span>Our Story</span>
+                </mat-list-item>
+                <mat-expansion-panel [class.mat-elevation-z0]="true">
+                    <mat-expansion-panel-header>
+                        Travel
+                    </mat-expansion-panel-header>
+                    <mat-nav-list>
+                        <a mat-list-item routerLink="/lodging">Lodging</a>
+                        <a mat-list-item routerLink="/restaurants">Food</a>
+                        <a mat-list-item routerLink="#">Activities</a>
+                        <a mat-list-item routerLink="#">Areas</a>
+                        <a mat-list-item routerLink="#">Airports</a>
+                    </mat-nav-list>
+                </mat-expansion-panel>
+            </mat-nav-list>
+        </mat-sidenav>
+        <mat-sidenav-content>
+            <router-outlet>
+
+            </router-outlet>
+        </mat-sidenav-content>
+      </mat-sidenav-container> 
+
+    </ng-container>
   
-  <!-- Only render this if there's an authenticated user -->
-  <ng-container *ngIf="authenticator.authStatus === 'authenticated'">
-
-    <div id="background-img">       
-    
-    </div>  
-    <div id="flowers" >       
-    
-    </div>  
-
-
-    <nav mat-tab-nav-bar [tabPanel]="tabPanel">
-        <a mat-tab-link
-        *ngFor="let link of navLinks"
-        [routerLink]="link.link"
-        routerLinkActive #rla="routerLinkActive"
-        [active]="rla.isActive"
-        class="tab"
-        i18n>
-        <span class="test">
-          {{link.label}} 
-        </span>
-         <!--{{ '6/15/15' | date:undefined:undefined:'ko-KR' }}-->
-        
-        </a>
-        </nav>
-        <mat-tab-nav-panel #tabPanel >
-          <router-outlet></router-outlet>
-        </mat-tab-nav-panel>
-
-
-
-        <!--
-        <ng-container i18n>Hello i18n!</ng-container>
-
-        <h1>{{text}}</h1>
-
-      <h1>{{I18n.get('Test String!')}}</h1>
-
-      <button (click)="switchLanguage()">Switch language</button>
-
-    <button (click)="signOut()">Sign Out</button>
-        -->
-
-
-  </ng-container>
-  
-  <!-- Render sign-in screen otherwise with authenticator -->
-  <ng-container *ngIf="authenticator.authStatus !== 'authenticated'">
-    <amplify-authenticator>
-        <ng-template
-              amplifySlot="authenticated"
-              let-user="user"
-              let-signOut="signOut"
-            />
-    </amplify-authenticator>
-  </ng-container>
-
+    <!-- Render sign-in screen otherwise with authenticator -->
+    <ng-container *ngIf="authenticator.authStatus !== 'authenticated'">
+      <amplify-authenticator>
+          <ng-template
+                amplifySlot="authenticated"
+                let-user="user"
+                let-signOut="signOut"
+              />
+      </amplify-authenticator>
+    </ng-container>
