--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,7 +2,7 @@
 
 
 
-<label id="example-radio-group-label">Language Preferance:</label>
+<label id="example-radio-group-label">{{I18n.get('Language Preferance:')}}</label>
 <mat-radio-group
   aria-labelledby="example-radio-group-label"
   class="example-radio-group"
@@ -16,4 +16,24 @@
     English
   </mat-radio-button>
 </mat-radio-group>
+
+<br/>
+
+<mat-slide-toggle>{{I18n.get('Recieve Email Notifications of website updates:')}}</mat-slide-toggle>
+
+
+<form class="example-form">
+  <mat-form-field class="example-full-width">
+    <mat-label>Email</mat-label>
+    <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
+           placeholder="Ex. pat@example.com">
+    <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+      Please enter a valid email address
+    </mat-error>
+    <mat-error *ngIf="emailFormControl.hasError('required')">
+      Email is <strong>required</strong>
+    </mat-error>
+  </mat-form-field>
+</form>
+
 
