add event details component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,9 @@
                 <mat-list-item routerLink="/ourstory">
                   <span>Our Story</span>
                 </mat-list-item>
+                <mat-list-item routerLink="#">
+                    <span>Gallery</span>
+                  </mat-list-item>
                 <mat-expansion-panel [class.mat-elevation-z0]="true">
                     <mat-expansion-panel-header>
                         Travel
