--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -1,5 +1,6 @@
 .example-card {
     max-width: 500px;
-    margin-bottom: 8px;
     margin: auto;
+    margin-bottom: 40px !important;
+    margin-top: 40px !important;
   }
