--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
                 <mat-list-item routerLink="/ourstory">
                   <span>Our Story</span>
                 </mat-list-item>
-                <mat-list-item routerLink="#">
+                <mat-list-item routerLink="/gallery">
                     <span>Gallery</span>
                   </mat-list-item>
                 <mat-expansion-panel [class.mat-elevation-z0]="true">
@@ -58,9 +58,9 @@
                     <mat-nav-list>
                         <a mat-list-item routerLink="/lodging">Lodging</a>
                         <a mat-list-item routerLink="/restaurants">Food</a>
-                        <a mat-list-item routerLink="#">Activities</a>
-                        <a mat-list-item routerLink="#">Areas</a>
-                        <a mat-list-item routerLink="#">Airports</a>
+                        <a mat-list-item routerLink="/activities">Activities</a>
+                        <a mat-list-item routerLink="/areas">Areas</a>
+                        <a mat-list-item routerLink="/airports">Airports</a>
                     </mat-nav-list>
                 </mat-expansion-panel>
             </mat-nav-list>
