--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
             <button mat-menu-item routerLink="/user">
                 <mat-icon>settings</mat-icon><span>Settings</span>
             </button>
-            <button mat-menu-item routerLink="#">
+            <button mat-menu-item routerLink="/help">
                 <mat-icon>help</mat-icon><span>Help</span>
             </button>
             <mat-divider></mat-divider>
