--- a/src/app/lodging/lodging.component.html
+++ b/src/app/lodging/lodging.component.html
@@ -1,1 +1,27 @@
-<p>lodging works!</p>
+
+
+
+<div *ngFor="let hotel of hotels">
+    <mat-card class="example-card">
+        <mat-card-header>
+        <mat-card-title-group>
+            <img mat-card-md-image src="{{hotel.image}}" >
+            <mat-card-title>{{hotel.name}}</mat-card-title>
+            <mat-card-subtitle> <a href="http://maps.google.com/?q={{hotel.address}}">{{hotel.address}} </a></mat-card-subtitle>
+            
+        </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content>
+        {{hotel.description}}
+
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-raised-button color="primary">Website</button>
+
+          </mat-card-actions>
+
+    </mat-card>
+</div>
+
+
+
