--- a/src/app/lodging/lodging.component.html
+++ b/src/app/lodging/lodging.component.html
@@ -16,6 +16,8 @@
 
         </mat-card-content>
         <mat-card-actions>
+          <button mat-raised-button color="primary">Details</button>
+          <button mat-raised-button color="primary">RSVP</button>
           <button mat-raised-button color="primary">Website</button>
 
           </mat-card-actions>
