--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,27 +40,38 @@
         <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
             <mat-nav-list>
                 <mat-list-item routerLink="/welcome">
-                    <mat-icon>dashboard</mat-icon><span>Home</span>
+                    <mat-icon>home</mat-icon><span>Home</span>
                 </mat-list-item>
                 <mat-list-item routerLink="/events">
-                  <span>Events</span>
+                  <mat-icon>event</mat-icon><span>Events</span>
                 </mat-list-item>
                 <mat-list-item routerLink="/ourstory">
-                  <span>Our Story</span>
+                  <mat-icon>menu_book</mat-icon><span>Our Story</span>
                 </mat-list-item>
                 <mat-list-item routerLink="/gallery">
-                    <span>Gallery</span>
+                  <mat-icon>photo_library</mat-icon><span>Gallery</span>
                   </mat-list-item>
                 <mat-expansion-panel [class.mat-elevation-z0]="true">
                     <mat-expansion-panel-header>
                         Travel
                     </mat-expansion-panel-header>
                     <mat-nav-list>
-                        <a mat-list-item routerLink="/lodging">Lodging</a>
-                        <a mat-list-item routerLink="/restaurants">Food</a>
-                        <a mat-list-item routerLink="/activities">Activities</a>
-                        <a mat-list-item routerLink="/areas">Areas</a>
-                        <a mat-list-item routerLink="/airports">Airports</a>
+                      <mat-list-item routerLink="/lodging">
+                        <mat-icon>hotel</mat-icon><span>Lodging</span>
+                      </mat-list-item>
+                      <mat-list-item routerLink="/restaurants">
+                        <mat-icon>restaurant_menu</mat-icon><span>Food</span>
+                      </mat-list-item>
+                      <mat-list-item routerLink="/activities">
+                        <mat-icon>local_activity</mat-icon><span>Activities</span>
+                      </mat-list-item>
+                      <mat-list-item routerLink="/areas">
+                        <mat-icon>map</mat-icon><span>Areas</span>
+                      </mat-list-item>
+                      <mat-list-item routerLink="/airports">
+                        <mat-icon>flight</mat-icon><span>Airports</span>
+                      </mat-list-item>
+
                     </mat-nav-list>
                 </mat-expansion-panel>
             </mat-nav-list>
