--- a/src/app/lodging/lodging.component.html
+++ b/src/app/lodging/lodging.component.html
@@ -16,9 +16,9 @@
 
         </mat-card-content>
         <mat-card-actions>
-          <button mat-raised-button color="primary">Details</button>
-          <button mat-raised-button color="primary">RSVP</button>
-          <button mat-raised-button color="primary">Website</button>
+          <button mat-raised-button color="primary" class="actbutton">Details</button>
+          <button mat-raised-button color="primary" class="actbutton">Website</button>
+          <button mat-raised-button color="primary" class="actbutton">Book</button>
 
           </mat-card-actions>
 
