--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,6 +51,9 @@
                 <mat-list-item routerLink="/gallery">
                   <mat-icon>photo_library</mat-icon><span>Gallery</span>
                   </mat-list-item>
+                  <mat-list-item routerLink="/gallery">
+                    <mat-icon>question_mark</mat-icon><span>FAQ</span>
+                    </mat-list-item>
                 <mat-expansion-panel [class.mat-elevation-z0]="true">
                     <mat-expansion-panel-header>
                         Travel
