--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,2 +1,18 @@
-<p>welcome works!</p>
-<h1>{{userService.userSettings.user}}</h1>
+
+<mat-grid-list cols="2" >
+    <mat-grid-tile
+        colspan="1"
+        rowspan="1">
+      Welcome message!
+      <h1>{{userService.userSettings.user}}</h1>
+
+<h1>{{userService.userInfo.message}}</h1>
+    </mat-grid-tile>
+    <mat-grid-tile
+        colspan="1"
+        rowspan="1">
+            <img src="assets/engagement/308-min.jpg" class="eng"/>
+
+      
+    </mat-grid-tile>
+  </mat-grid-list>
