--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -7,6 +7,7 @@
       <h1>{{userService.userSettings.user}}</h1>
 
 <h1>{{userService.userInfo.message}}</h1>
+<span>We've waited 4,063 days for this. Party accordingly.</span>
     </mat-grid-tile>
     <mat-grid-tile
         colspan="1"
