--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
                 <mat-list-item routerLink="/gallery">
                   <mat-icon>photo_library</mat-icon><span>Gallery</span>
                   </mat-list-item>
-                  <mat-list-item routerLink="/gallery">
+                  <mat-list-item routerLink="/faq">
                     <mat-icon>question_mark</mat-icon><span>FAQ</span>
                     </mat-list-item>
                 <mat-expansion-panel [class.mat-elevation-z0]="true">
