update event details routing

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -19,7 +19,7 @@
 
         </mat-card-content>
         <mat-card-actions>
-          <button mat-raised-button color="primary">Details</button>
+          <button mat-raised-button [routerLink]="['/eventdetails', event.name]" color="primary">Details</button>
 
           </mat-card-actions>
 
