--- a/src/app/areas/areas.component.html
+++ b/src/app/areas/areas.component.html
@@ -1,1 +1,22 @@
-<p>areas works!</p>
+
+
+
+<div *ngFor="let area of areas">
+    <mat-card class="example-card">
+        <mat-card-header>
+        <mat-card-title-group>
+            <img mat-card-md-image src="{{area.image}}" >
+            <mat-card-title>{{area.location}}</mat-card-title>
+
+        </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content>
+        {{area.description}}
+
+        </mat-card-content>
+
+    </mat-card>
+</div>
+
+
+
