--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,6 +20,13 @@ span {
   justify-content: center;
 } 
 
+.example-card {
+  max-width: 500px;
+  margin: auto;
+  margin-bottom: 40px !important;
+  margin-top: 40px !important;
+}
+
 
 
 #background-img {  
