--- a/src/app/airports/airports.component.html
+++ b/src/app/airports/airports.component.html
@@ -1,1 +1,23 @@
-<p>airports works!</p>
+
+
+
+<div *ngFor="let airport of airports">
+    <mat-card class="example-card">
+        <mat-card-header>
+        <mat-card-title-group>
+            <!--<img mat-card-md-image src="{{airport.image}}" >-->
+            <mat-card-title>{{airport.name}}</mat-card-title>
+            <mat-card-subtitle>{{airport.address}}</mat-card-subtitle>
+
+        </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content>
+        {{airport.description}}
+
+        </mat-card-content>
+
+    </mat-card>
+</div>
+
+
+
