add welcome info

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 
-<mat-grid-list cols="2" rowHeight="50%" class="all">
+<mat-grid-list cols="2" rowHeight="33%" class="all">
     <mat-grid-tile
         colspan="1"
         rowspan="1">
@@ -10,7 +10,7 @@
     
     <mat-grid-tile
         colspan="1"
-        rowspan="2">
+        rowspan="3">
             <img src="assets/engagement/308-min.jpg" class="eng"/>
 
       
@@ -20,7 +20,14 @@
         colspan="1"
         rowspan="1">
 
-        <h1>{{userService.userInfo.message}}</h1>
+        <span>{{userService.userInfo.message}}</span>
+    </mat-grid-tile>
+
+    <mat-grid-tile
+        colspan="1"
+        rowspan="1">
+
+        <span>We can’t wait to celebrate our wedding day with you. You’ll find all the exciting details throughout our site. We will be regularly updating this site. Check out the user settings if you want to receive updates when the site updates. We are excited to share this special time with you. </span>
     </mat-grid-tile>
 </mat-grid-list>
 
