--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,4 +1,43 @@
 
+
+<div class='all'>
+
+
+    <div  fxLayout="column" fxLayoutGap="20px" fxShow.gt-xs="false" style="padding-right: 30px;">
+        <h1 fxFlex >We've waited 4,063 days for this. Party accordingly.</h1>
+        <span fxFlex >{{userService.userInfo.message}}</span>
+        <img fxFlex  src="assets/engagement/360-c.png" class="eng" style=""/>
+        
+        <span fxFlex >We can’t wait to celebrate our wedding day with you. You’ll find all the exciting details throughout our site. We will be regularly updating this site. Check out the user settings if you want to receive updates when the site updates. We are excited to share this special time with you. </span>
+
+    </div>
+
+
+
+
+    <div  fxLayout="row" fxLayoutGap="20px" fxShow.lt-sm="false" class="total">
+
+            <div fxFlex="50"  fxLayout="column">
+                <h1 fxFlex >We've waited 4,063 days for this. Party accordingly.</h1>
+               
+                <span fxFlex >{{userService.userInfo.message}}</span>
+                <span fxFlex >We can’t wait to celebrate our wedding day with you. You’ll find all the exciting details throughout our site. We will be regularly updating this site. Check out the user settings if you want to receive updates when the site updates. We are excited to share this special time with you. </span>
+
+            </div>
+            <img fxFlex="50"  src="assets/engagement/308-min.jpg" class="eng"/>
+
+
+
+        
+    </div>
+
+
+
+</div>
+
+
+<!--
+
 <mat-grid-list cols="2" rowHeight="33%" class="all">
     <mat-grid-tile
         colspan="1"
@@ -30,6 +69,9 @@
         <span>We can’t wait to celebrate our wedding day with you. You’ll find all the exciting details throughout our site. We will be regularly updating this site. Check out the user settings if you want to receive updates when the site updates. We are excited to share this special time with you. </span>
     </mat-grid-tile>
 </mat-grid-list>
+
+-->
+
 
 
   
