--- a/src/app/airports/airports.component.html
+++ b/src/app/airports/airports.component.html
@@ -5,7 +5,7 @@
     <mat-card class="example-card">
         <mat-card-header>
         <mat-card-title-group>
-            <!--<img mat-card-md-image src="{{airport.image}}" >-->
+            <img mat-card-md-image src="{{airport.image}}" >
             <mat-card-title>{{airport.name}}</mat-card-title>
             <mat-card-subtitle>{{airport.address}}</mat-card-subtitle>
 
