--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,16 +13,20 @@
         <span>{{I18n.get('Jacqui & Peter Wedding')}}</span>
         <span class="toolbar-item-spacer"></span>
 
+        <!--
         <button mat-icon-button matTooltip="Notifications">
             <mat-icon>notifications</mat-icon>
         </button>
+      -->
         <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
             <mat-icon>account_circle</mat-icon>
         </button>
         <mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
+          <!--
             <button mat-menu-item routerLink="#">
                 <mat-icon>person</mat-icon><span>My Account</span>
             </button>
+          -->
             <button mat-menu-item routerLink="/user">
                 <mat-icon>settings</mat-icon><span>Settings</span>
             </button>
@@ -37,7 +41,7 @@
       </mat-toolbar>
 
       <mat-sidenav-container class="app-container">
-        <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
+        <mat-sidenav #sidenav mode="over" [class.mat-elevation-z4]="true" class="app-sidenav">
             <mat-nav-list>
                 <mat-list-item routerLink="/welcome">
                     <mat-icon>home</mat-icon><span>Home</span>
