--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,76 +2,138 @@
 
 <div class='all'>
 
+   <!--
+<img src="assets/invite.gif"/>
 
-    <div  fxLayout="column" fxLayoutGap="20px" fxShow.gt-xs="false" style="padding-right: 30px;">
-        <h1 fxFlex >We've waited 4,063 days for this. Party accordingly.</h1>
-        <span fxFlex >{{userService.userInfo.message}}</span>
-        <img fxFlex  src="assets/engagement/360-c.png" class="eng" style=""/>
-        
-        <span fxFlex >We can’t wait to celebrate our wedding day with you. You’ll find all the exciting details throughout our site. We will be regularly updating this site. Check out the user settings if you want to receive updates when the site updates. We are excited to share this special time with you. </span>
+   --> 
 
+
+   <div fxLayout="column">
+<!--
+   <h1  >We've waited 4,063 days for this.</h1>
+
+   <h1  >Party accordingly.</h1>
+   <span  >TODO Personal message:  {{userService.userInfo.message}}</span>
+-->   
+<br/><br/>
+
+
+   <div fxFlex fxLayout="row">
+    <div fxFlex >
+        Welcome cherished family and friends! 
+        You've stumbled upon the cyber hub of our love story—our wedding website! 
+        This is the GitHub repository of our love story, 
+        filled with commits of cherished memories, branches of shared dreams, 
+        and occasional pull requests for advice 
+        (because, hey, love can be as tricky as debugging a complex algorithm!).
+        So, whether you're here to peek at the source code of our romance, 
+        debug any wedding jitters, or simply to 'fork' some cake, 
+        we’re thrilled to have you part of this adventure. 
+        Get ready for an unforgettable 'code merge' as we commit to a lifetime of happiness together!
+    </div>
+    <img  fxFlex class="git" src="assets/githeart.drawio.png"/>
+    
+
+   </div>
+
+   <br/><br/>
+
+   
+   <div fxFlex fxLayout="row">
+    <img  fxFlex class="cal" src="assets/april_14.png"/>
+    <div fxFlex >
+    Ready to dive into the epic schedule of fun we've cooked up? 
+    Head on over to our Events Page for all the juicy details!
+    Let the countdown to the festivities begin!
+
+    Look out for the main event on April 14th!
+    The day when taxes have to be in and love is in the air—quite the combo, huh? 
+    It's like the universe saying, "Hey, here's a tax deadline and a chance to celebrate love simultaneously!"
+        </div>
+ 
+    
+   </div>
+
+   <br/><br/>
+   <div fxFlex fxLayout="row">
+    <div fxFlex="80" >
+    Craving knowledge? 
+    Venture into our 'FAQ - Fantastic Answers Quest'; 
+    your personal "debugging console" for unraveling life's mysteries. 
+    It's where you bring your burning questions, and just like a console, 
+    it throws back witty answers instead of error codes.
     </div>
 
 
+    <img  class="terminal" fxFlex src="assets/console.png"/>
 
-
-    <div  fxLayout="row" fxLayoutGap="20px" fxShow.lt-sm="false" class="total">
-
-            <div fxFlex="50"  fxLayout="column">
-                <h1 fxFlex >We've waited 4,063 days for this. Party accordingly.</h1>
-               
-                <span fxFlex >{{userService.userInfo.message}}</span>
-                <span fxFlex >We can’t wait to celebrate our wedding day with you. You’ll find all the exciting details throughout our site. We will be regularly updating this site. Check out the user settings if you want to receive updates when the site updates. We are excited to share this special time with you. </span>
-
-            </div>
-            <img fxFlex="50"  src="assets/engagement/308-min.jpg" class="eng"/>
+   </div>
 
 
 
-        
+   <br/><br/>
+
+   <div fxFlex fxLayout="row">
+    <img  fxFlex="30" src="assets/virginia_plane.png"/>
+    <div fxFlex >
+    Attention, fellow adventurers from far and wide! If your path to our legendary celebration involves traversing the vast digital highways or braving the interstellar byways, look no further than our Travel Section—an invaluable treasure trove of guidance and wisdom specially crafted for explorers like you!
+
+
+    Whether you're navigating through the quantum realms or hitchhiking on a friendly spaceship, our Travel Section is your trusty sidekick, ready to ensure your journey is smoother than debugging a tricky piece of code.
+    Our collection of insider insights and dimension-hopping advice awaits your discovery. 
+    Safe travels!
     </div>
+    
+   </div>
 
+   <br/><br/>
+
+   <div fxFlex fxLayout="row">
+    <div fxFlex="90" >
+    Scroll through our virtual blueprint, witness the structural integrity of our journey, 
+    and join us as we revel in the beauty of a perfectly engineered union.
+
+    Think of this as the interface to our love story, where bytes of laughter, loops of cherished moments, and a sprinkle of binary banter all come together in a beautifully compiled code of memories.
+ 
+    
+    </div>
+    <img  fxFlex class="book" src="assets/love_story.png"/>
+
+   </div>
+
+   <br/><br/>
+
+
+
+   <div fxFlex fxLayout="row">
+    <img  fxFlex class="book" src="assets/jp_gallrey.png"/>
+    <div fxFlex >
+
+    Our journey has been a symphony of calculated risks, 
+    moments perfectly engineered, and a beautiful equation of love that's stood the test of time.
+
+    Welcome to our pixel-perfect adventure of love, unity, and a lifetime of 'syntax errors' turned 'perfect code!'
+
+    </div>
+    
+
+    
+   </div>
+
+
+   <br/><br/>
+
+    <div fxFlex >
+    Stay tuned for more tales of love, chaotic planning adventures, and a few surprise plot twists. 
+   </div> 
+   <br/>
+    <img fxFlex src="assets/stay_tuned.png"/>
+    
+
+
+
+
+   </div>
 
 
 </div>
-
-
-<!--
-
-<mat-grid-list cols="2" rowHeight="33%" class="all">
-    <mat-grid-tile
-        colspan="1"
-        rowspan="1">
-
-        <h1>We've waited 4,063 days for this. Party accordingly.</h1>
-    </mat-grid-tile>
-    
-    
-    <mat-grid-tile
-        colspan="1"
-        rowspan="3">
-            <img src="assets/engagement/308-min.jpg" class="eng"/>
-
-      
-    </mat-grid-tile>
-
-    <mat-grid-tile
-        colspan="1"
-        rowspan="1">
-
-        <span>{{userService.userInfo.message}}</span>
-    </mat-grid-tile>
-
-    <mat-grid-tile
-        colspan="1"
-        rowspan="1">
-
-        <span>We can’t wait to celebrate our wedding day with you. You’ll find all the exciting details throughout our site. We will be regularly updating this site. Check out the user settings if you want to receive updates when the site updates. We are excited to share this special time with you. </span>
-    </mat-grid-tile>
-</mat-grid-list>
-
--->
-
-
-
-  
