--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -1,26 +1,37 @@
-.pic {
-    height: 60px;
-    width: 60px;
-}
-
-.eng {
-}
-
 .all {
-    height:100%;
+  height:100%;
     padding-left: 30px;
+    position: relative;
+    top: 0px;
+    left: 0px;
 
     width: 100%;
+    overflow: scroll;
+
+
+
+    background-image: url("../../assets/paper_o.png");
+    background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+
 }
 
-.total {
-    /* Firefox */
-    height: -moz-calc(100% - 10%);
-    /* WebKit */
-    height: -webkit-calc(100% - 10%);
-    /* Opera */
-    height: -o-calc(100% - 10%);
-    /* Standard */
-    height: calc(100% - 10%);
-    position: fixed;
+.cal {
+  max-height: 150px;
+  max-width: 250px;
+}
+
+.git {
+  max-height: 150px;
+  max-width: 250px;
+}
+
+.terminal {
+  max-height: 150px;
+}
+
+.book {
+  max-height: 100px;
+  max-width: 150px;
 }
