--- a/src/app/ourstory/ourstory.component.html
+++ b/src/app/ourstory/ourstory.component.html
@@ -1,7 +1,7 @@
 <div class="all">
 
     
-    <div class="container">
+    <div class="containerx">
         <div class="flip-book" id="demoBookExample">
             <div class="page page-cover page-cover-top" data-density="hard">
                 <div class="page-content">
