--- a/src/app/airports/airports.component.html
+++ b/src/app/airports/airports.component.html
@@ -1,6 +1,6 @@
 
 
-
+<div class="all">
 <div *ngFor="let airport of airports">
     <mat-card class="example-card">
         <mat-card-header>
@@ -20,4 +20,4 @@
 </div>
 
 
-
+</div>
