--- a/src/app/areas/areas.component.html
+++ b/src/app/areas/areas.component.html
@@ -1,5 +1,5 @@
 
-
+<div class="all">
 
 <div *ngFor="let area of areas">
     <mat-card class="example-card">
@@ -18,5 +18,5 @@
     </mat-card>
 </div>
 
-
+</div>
 
