--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -4,3 +4,18 @@
     margin-bottom: 40px !important;
     margin-top: 40px !important;
   }
+
+  .all {
+    height:100%;
+      position: relative;
+      top: 0px;
+      left: 0px;
+  
+      width: 100%;
+      overflow: scroll;
+
+      background-image: url("../../assets/paper_o.png");
+      background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+  }
