--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,4 +1,4 @@
-
+<div class="all">
 <mat-accordion displayMode="default" multi="true"
                class="faq-container">
   <mat-expansion-panel *ngFor="let faqItem of faqList">
@@ -6,3 +6,4 @@
     <p>{{faqItem.answer}}</p>
   </mat-expansion-panel>
 </mat-accordion>
+</div>
