--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -1,3 +1,19 @@
+.all {
+    height:100%;
+      position: relative;
+      top: 0px;
+      left: 0px;
+  
+      width: 100%;
+      overflow: scroll;
+
+      background-image: url("../../assets/paper_o.png");
+      background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+  }
+
+
 .one {
     height: 40%;
     width: 50%;
