--- a/src/app/lodging/lodging.component.css
+++ b/src/app/lodging/lodging.component.css
@@ -9,3 +9,18 @@
   .actbutton {
     margin-left: 5px;
   }
+
+  .all {
+    height:100%;
+      position: relative;
+      top: 0px;
+      left: 0px;
+  
+      width: 100%;
+      overflow: scroll;
+
+      background-image: url("../../assets/paper_o.png");
+      background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+  }
