--- a/src/app/countdown/countdown.component.html
+++ b/src/app/countdown/countdown.component.html
@@ -1,7 +1,7 @@
 
 <div class="timer">
     <h4>The big day is coming!!!</h4>
-    <span id="days"> {{daysToDday}} </span>Day(s)
+    <span id="days"> {{daysToDday}} </span>Days
     <span id="hours"> {{hoursToDday}} </span>Hrs
     <span id="minutes"> {{minutesToDday}} </span>Min
     <span id="seconds"> {{secondsToDday}} </span>S
