--- a/src/app/ourstory/ourstory.component.html
+++ b/src/app/ourstory/ourstory.component.html
@@ -5,7 +5,7 @@
         <div class="flip-book" id="demoBookExample">
             <div class="page page-cover page-cover-top" data-density="hard">
                 <div class="page-content">
-                    <h2>Jacqui and Peters Story: Our Unintentionally Epic Journey Together</h2>
+                    <h2>Jacqui and Peter: Our Unintentionally Epic Journey Together</h2>
                 </div>
             </div>
             <div *ngFor="let page of pagesList" class="page">
