--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -8,7 +8,7 @@
     <br/><br/>
 
 
-   <div fxFlex fxLayout="row">
+   <div fxFlex fxLayout="row" fxLayout.xs="column">
     <div fxFlex [innerHTML]="welcome">
         
     </div>
@@ -20,7 +20,7 @@
    <br/><br/>
 
    
-   <div fxFlex fxLayout="row">
+   <div fxFlex fxLayout="row"  fxLayout.xs="column">
     <!--<img  fxFlex class="cal" src="assets/april_14.png"/>-->
     <app-countdown fxFlex="30"></app-countdown>
     <div fxFlex [innerHTML]="date">
@@ -31,7 +31,7 @@
    </div>
 
    <br/><br/>
-   <div fxFlex fxLayout="row">
+   <div fxFlex fxLayout="row"  fxLayout.xs="column">
     <div fxFlex="80" [innerHTML]="faq">
 
     </div>
@@ -45,7 +45,7 @@
 
    <br/><br/>
 
-   <div fxFlex fxLayout="row">
+   <div fxFlex fxLayout="row"  fxLayout.xs="column">
     <img  fxFlex="30" src="assets/virginia_plane.png"/>
     <div fxFlex [innerHTML]="travel">
 
@@ -55,7 +55,7 @@
 
    <br/><br/>
 
-   <div fxFlex fxLayout="row">
+   <div fxFlex fxLayout="row"  fxLayout.xs="column">
     <div fxFlex="90" [innerHTML]="story">
 
     </div>
@@ -67,7 +67,7 @@
 
 
 
-   <div fxFlex fxLayout="row">
+   <div fxFlex fxLayout="row"  fxLayout.xs="column">
     <img  fxFlex class="book" src="assets/jp_gallrey.png"/>
     <div fxFlex [innerHTML]="gallery">
 
