--- a/src/app/airports/airports.component.html
+++ b/src/app/airports/airports.component.html
@@ -7,7 +7,7 @@
         <mat-card-title-group>
             <img mat-card-md-image src="{{airport.image}}" >
             <mat-card-title>{{airport.name}}</mat-card-title>
-            <mat-card-subtitle>{{airport.address}}</mat-card-subtitle>
+            <mat-card-subtitle><a href="http://maps.google.com/?q={{airport.address}}">{{airport.address}}</a></mat-card-subtitle>
 
         </mat-card-title-group>
         </mat-card-header>
