--- a/src/app/ourstory/ourstory.component.html
+++ b/src/app/ourstory/ourstory.component.html
@@ -1,11 +1,11 @@
 <div class="all">
 
-    
+    <div class="containery">
     <div class="containerx">
         <div class="flip-book" id="demoBookExample">
             <div class="page page-cover page-cover-top" data-density="hard">
                 <div class="page-content">
-                    <h2>Jacqui and Peter: Our Unintentionally Epic Journey Together</h2>
+                    <h2>Jacqui and Peter: <br/>Our Unintentionally Epic Journey Together</h2>
                 </div>
             </div>
             <div *ngFor="let page of pagesList" class="page">
@@ -19,11 +19,12 @@
 
             <div class="page page-cover page-cover-bottom" data-density="hard">
                 <div class="page-content">
-                    <h2>ITS JUST THE BEGGINING...</h2>
+                    <h2>ITS JUST STARTING...</h2>
                 </div>
             </div>
         </div>
     </div>
+</div>
 </div>
 <!--
 
