--- a/src/app/ourstory/ourstory.component.scss
+++ b/src/app/ourstory/ourstory.component.scss
@@ -1,28 +1,46 @@
 .all {
     
   
+    width: 100%; 
+    height: 100%;
+    overflow:scroll;
   
-  
-      background-image: url("../../assets/wood_o.png");
+      background-image: url("../../assets/paper_o.png");
       background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover; 
+    //position: relative;
   
   }
 
+.containery {
+  //position: relative;
+height: 100%;
+width: 100%;
+//padding: 5%;
+//margin: 5%;
 
-.containerx {
+overflow: scroll;
+}  
+
+.containerx{
 //padding: 30px;
 //position: relative;
-height: 90%;
-width: 90%;
-padding: 5%;
+height: 100%;
+width: 100%;
+//margin: 5%;
+overflow: scroll;
 }
 
   .flip-book {
 
     display: none;
-    background-size: cover;
+    //background-size: cover;
+    //position: relative;
+    top: 5%;
+    left: 5%;
+    height: 90%;
+    width: 90%;
   }
   
   .page {
@@ -35,7 +53,7 @@ padding: 5%;
   
     .page-content {
       width: 90%;
-      height: 90%;
+      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -91,17 +109,19 @@ padding: 5%;
     }
   
     &.page-cover {
-      //background-color: hsl(35, 45, 80);
+      background-color: hsl(35, 77%, 67%);
       //color:  hsl(35, 35, 35);
+      /*
       background-image: url("../../assets/wood_lights.png");
       background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover; 
+    */
   
   
       h2 {
         text-align: center;
-        padding-top: 50%;
+        //padding-top: 50%;
         font-size: 210%;
       }
   
