--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -37,7 +37,7 @@
     </div>
 
 
-    <img  class="terminal" fxFlex src="assets/console.png"/>
+    <img  class="terminal" fxFlex src="assets/computer_console.png"/>
 
    </div>
 
@@ -84,7 +84,7 @@
 
    </div> 
    <br/>
-    <img fxFlex src="assets/stay_tuned.png"/>
+    <img fxFlex class="tuned" src="assets/stay_tuned.png"/>
     
 
 
