--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -15,6 +15,10 @@
 -->
 
 <div  > 
+
+
+
+    <!--
 <p-galleria class="galleria" [value]="images1" [showItemNavigators]="true" verticalThumbnailViewPortHeight="30px" [responsiveOptions]="responsiveOptions" [containerStyle]="{ 'max-width': '640px' }" [numVisible]="5">
     <ng-template pTemplate="item" let-item >
         <div class="two">
@@ -30,6 +34,32 @@
     </ng-template>
 
 </p-galleria>
+-->
+
+
+<mat-grid-list cols="4" rowHeight="100px">
+    <mat-grid-tile
+        *ngFor="let tile of images1"
+        [colspan]="tile.cols"
+        [rowspan]="tile.rows"
+        (mouseenter)="tile.hover=true"
+        (mouseleave)="tile.hover=false">
+      <img src="{{tile.itemImageSrc}}" width="100%" height="100%">
+      <div *ngIf="tile.hover">Some text here</div>
+    </mat-grid-tile>
+  </mat-grid-list>
+
+<!--
+<div *ngFor="let item of images1" gdcolumns="repeat(auto-fill, minmax(200px, 1fr))">
+    <img  src="{{item.itemImageSrc}}" width="{{item.width}}" height="{{item.height}}"/>
+</div>
+-->
+
+
+
+
+
+
 
 </div>
 
