--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -14,34 +14,29 @@
   }
 
 
-.one {
-    height: 40%;
-    width: 50%;
-    margin: auto;
-}
-
-
-
-.total {
+  .hover {
+    position:absolute;
     height: 100%;
     width: 100%;
+    background-color: rgba(0, 255, 255, .6);
+
+  }
+
+.tile {
+    //position: relative; 
+    text-align: center;
+}
+.img {
+    height: 100%;
+    width: 100%;
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent;
+    //border-image-source: url("https://webcode.tools/img/border-image.png");
+    border-image-source: url("../../assets/frames/pf.png");
+    border-image-slice: 100;
+    border-image-repeat: round;
 }
 
 
-
-.galleria {
-    max-height: 40px;
-    max-width: 20px;
-
-}
-
-.img-item {
-    height: 100px;
-}
-
-
-.thumb-item {
-    height: 30px;
-    width: 30px;
-}
 
