--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,6 +64,9 @@
                   <mat-list-item routerLink="/faq">
                     <mat-icon>question_mark</mat-icon><span>FAQ</span>
                     </mat-list-item>
+                    <mat-list-item routerLink="/rsvp">
+                      <mat-icon>mark_email_read</mat-icon><span>RSVP</span>
+                      </mat-list-item>
                 <mat-expansion-panel [class.mat-elevation-z0]="true">
                     <mat-expansion-panel-header>
                         Travel
