--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,72 +1,19 @@
- <div class="total">
+ <div class="all">
     
     
-    <!--
-    <gallery class="one" [items]="images" [dots]="true" [thumb]="true" [itemAutosize]="true" imageSize="cover"  [autoHeight]="false" thumbPosition="left"  [thumbAutosize]="true" [autoPlay]="false"></gallery>
-    -->
-
-
-    <!--
-    <p-galleria [value]="images1">
-        <ng-template pTemplate="item" let-item>
-            <img [src]="item.previewImageSrc" [alt]="item.alt" />
-        </ng-template>
-    </p-galleria>
--->
-
-<div  > 
-
-
-
-    <!--
-<p-galleria class="galleria" [value]="images1" [showItemNavigators]="true" verticalThumbnailViewPortHeight="30px" [responsiveOptions]="responsiveOptions" [containerStyle]="{ 'max-width': '640px' }" [numVisible]="5">
-    <ng-template pTemplate="item" let-item >
-        <div class="two">
-            <img class="img-item" [src]="item.itemImageSrc" />
-        </div>
-        
-    </ng-template>
-    
-    <ng-template pTemplate="thumbnail" let-item>
-        <div class="grid grid-nogutter justify-content-center">
-            <img class="thumb-item" [src]="item.thumbnailImageSrc" />
-        </div>
-    </ng-template>
-
-</p-galleria>
--->
-
-
 <mat-grid-list cols="4" rowHeight="100px">
     <mat-grid-tile
-        *ngFor="let tile of images1"
+        *ngFor="let tile of images"
         [colspan]="tile.cols"
         [rowspan]="tile.rows"
         (mouseenter)="tile.hover=true"
-        (mouseleave)="tile.hover=false">
-      <img src="{{tile.itemImageSrc}}" width="100%" height="100%">
-      <div *ngIf="tile.hover">Some text here</div>
+        (mouseleave)="tile.hover=false"
+        class="tile">
+      <img src="{{tile.itemImageSrc}}" class="img">
+      <div class="hover" *ngIf="tile.hover">{{tile.alt}}</div>
     </mat-grid-tile>
   </mat-grid-list>
 
-<!--
-<div *ngFor="let item of images1" gdcolumns="repeat(auto-fill, minmax(200px, 1fr))">
-    <img  src="{{item.itemImageSrc}}" width="{{item.width}}" height="{{item.height}}"/>
-</div>
--->
-
-
-
-
-
 
 
 </div>
-
-
-</div>
-
-
-<!--
-    <gallery [items]="items" thumbPosition="left"></gallery>
--->
