--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -33,9 +33,9 @@
     border-style: solid;
     border-color: transparent;
     //border-image-source: url("https://webcode.tools/img/border-image.png");
-    border-image-source: url("../../assets/frames/pf.png");
-    border-image-slice: 100;
-    border-image-repeat: round;
+    //border-image-source: url("../../assets/frames/pf.png");
+    //border-image-slice: 100;
+    //border-image-repeat: round;
 }
 
 
